# recipe-server

./: Cargo.toml  LICENSE  README.md  recipes.json
src/: main.rs  model.rs
templates/: recipe.html
